sort and python version bump
